# metaai

./: pyproject.toml  readme.md  requirements.txt
configs/: default.yaml
configs/paperflows/: mac_community.yaml  star_community.yaml
configs/prompts/mac/: debater_sys.txt  debater_user.txt  judge_sys.txt  judge_user.txt
configs/prompts/star/: student_sys.txt  student_user1.txt  student_user2.txt  teacher_sys.txt  teacher_user.txt
data/datasets/: gsm8k_500.jsonl  humaneval.jsonl
data/roles/: generated_roles.jsonl  gsm8k_generated_roles.jsonl  gsm8k_generated_roles_1.jsonl  humaneval_generated_roles.jsonl
logs/gens/paper/: mac_community_gsm8k_test_seed0.jsonl
logs/metrics/: baseline_cot_gsm8k_test.csv  baseline_selfcons_k10_gsm8k_test.csv  baseline_selfcons_k3_gsm8k_test.csv  eval_hybrid.csv  eval_metagen_humaneval.csv  eval_metagen_humaneval_guardrails_1.csv  eval_metagen_humaneval_smoke.csv  eval_pure-llm.csv  paper_mac_community_gsm8k_test.csv  paper_star_community_gsm8k_test.csv
metagen_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: make_gsm8k_sample.py  run_baselines.py  run_dataset_eval.py  run_paper_baseline.py  single_agent_baseline.py
scripts/test/: cost_search_demo.py  demo_pipeline.py  end2end_es_demo.py  eval_and_plot.py  g_designer_demo.py  parametric_demo.py  peft_train_and_run.py  role_space_demo.py  smoke_test.py  softmask_ste_demo.py  train_self_evolve.py  tri_self_evolve_demo.py
src/metagen_ai/: __init__.py
src/metagen_ai/architect/: g_designer.py  role_generator.py  seed.py
src/metagen_ai/utils/: llm.py  (+5 more)
(+24 files in other folders)
